--- a/index.html
+++ b/index.html
@@ -5,17 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ean's portfolio</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
+    <section id="home" class="hero">
+        <img src="download.jpeg" alt="my profile picture" width="50%"/> 
+        <h2>hi, i am <span class="accent">Ean Worrell</span></h2>
+        <p>I'm a high school student learning web development!</p>
+    </section>
 
-<h3> My Website </h3>
-<h5> I was able to get to get to championships in volleyball and i have started to like to play basketball </h5>
+    <section id="about" class="section"> 
+        <h2>About me</h2>
+        <p>5-6 sentences abt myself</p>
+    </section>
 
-<a href="https://www.google.com/imgres?q=black%20cat&imgurl=https%3A%2F%2Fmedia.hswstatic.com%2FeyJidWNrZXQiOiJjb250ZW50Lmhzd3N0YXRpYy5jb20iLCJrZXkiOiJnaWZcL2dldHR5aW1hZ2VzLTE0MjIzNDI0MDYuanBnIiwiZWRpdHMiOnsicmVzaXplIjp7IndpZHRoIjo4Mjh9fX0%3D&imgrefurl=https%3A%2F%2Fanimals.howstuffworks.com%2Fpets%2Fblack-cats.htm&docid=vKFQ1D-9l5RFXM&tbnid=YsZLO3--axM8UM&vet=12ahUKEwjfr4Cn-K2OAxVqwvACHbukMQwQM3oECHEQAA..i&w=828&h=465&hcb=2&ved=2ahUKEwjfr4Cn-K2OAxVqwvACHbukMQwQM3oECHEQAA">A LINK!</a>
-    <!-- This is where most of my code will live -->
-
-
+    <section id="skills" class="section">
+        <h2>My skills</h2>
+        <div class="grid">
+            <div>HTML</div>
+            <div>CSS</div>
+            <div>Javascript</div>
+        </div>
+    </section>
 
 </body>
 
