Made 2 unique IDs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
     <section id="about" class="section"> 
         <h2>About me</h2>
-        <p>5-6 sentences abt myself</p>
+        <p>Hi, My name is Ean and some things I like to do is screenshoting every homework and putting it in my reminders so I dont forget about it cause I am very forgetful. 
+            I take pictures of everything that i need to know then i turn them into mini note sections so i can study them. 
+            I set many different alarms because i'm a heavy sleeper and i like to wake up on time.
+             I like to play many different sports some that i like to play are basketball, volleyball, and football. 
+             One sport that i was on a team for was volleyball where me and my team made it to championships.</p>
     </section>
 
     <section id="skills" class="section">
@@ -28,6 +32,17 @@
             <div>Javascript</div>
         </div>
     </section>
+
+    <section id="projects" class="section">
+        <h2> My Projects</h2>
+    </section>
+
+    <section id="Contact" class="section">
+        <h2> Contact</h2>
+        <p>feel free to reach out to me via email <a href="Mailto:Ejworrell3@gmail.com">Ejworrell3@gmail.com </a></p>
+    </section>
+
+    
 
 </body>
 
