--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <section id="home" class="hero">
-        <img src="download.jpeg" alt="my profile picture" width="50%"/> 
+        <img src="31D59DD9-ED75-47A2-902C-7CD91176CFB7.jpeg" alt="my profile picture" width="50%"/> 
         <h2>hi, i am <span class="accent">Ean Worrell</span></h2>
         <p>I'm a high school student learning web development!</p>
     </section>
@@ -64,3 +64,4 @@
 </body>
 
 </html>
+
