Fixed my testimonials and made improvments to my portfolio

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <body>
     <section id="home" class="hero">
-        <img src="31D59DD9-ED75-47A2-902C-7CD91176CFB7.jpeg" alt="my profile picture" width="50%"/> 
-        <h2>hi, i am <span class="accent">Ean Worrell</span></h2>
+        <img src="unnamed (1).jpg" alt="my profile picture" width="50%"/> 
+        <h2>hi, I am <span class="accent">Ean Worrell</span></h2>
         <p>I'm a high school student learning web development!</p>
     </section>
 
