--- a/testimonials.html
+++ b/testimonials.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ean's portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
     <link href="style2.css" rel="stylesheet">
 </head>
 
@@ -53,8 +53,8 @@
                         <i class="fas fa-chevron-left"></i>
                     </button>
 
-                     <button class="prev-btn">
-                        <i class="fas fa-chevron-left"></i>
+                     <button class="next-btn">
+                        <i class="fas fa-chevron-right"></i>
                     </button>
 
                 </div>
