--- a/testimonials.html
+++ b/testimonials.html
@@ -1,14 +1,50 @@
 <!DOCTYPE html> <!--This tells the browser what kind of file we're writing-->
 <html>
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ean's portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="style2.css" rel="stylesheet">
+    <style>
+    :root {
+      --bg-light:#ffffff;
+      --bg-dark:#121212;
+      --text-light:#212529;
+      --text-dark:#f8f9fa;
+      --accent:#007bff;
+      body.dark-mode .review {
+  background-color: #1e1e1e;
+  border: 1px solid #333;
+
+    }
+    body {
+      background-color: var(--bg-light);
+      color: var(--text-light);
+      transition: background-color .25s, color .25s;
+    }
+    body.dark-mode {
+      background-color: var(--bg-dark);
+      color: var(--text-dark);
+    }
+    body.dark-mode .navbar {
+      background-color:#1e1e1e !important;
+    }
+    body.dark-mode .form-check-label i.fa-moon::before {
+      content:"\f185";
+    }
+    .form-check-input:checked {
+      background-color: var(--accent);
+      border-color: var(--accent);
+    }
+
+</style>
+
 </head>
+
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
@@ -24,6 +60,13 @@
         <a class="nav-link" href="index.html#about">About Me</a>
         <a class="nav-link" href="index.html#skills">skills</a>
         <a class="nav-link" href="testimonials.html">Testimonials</a>
+        <a class="nav-link" href="testimonials.html">Testimonials</a>
+ <div class="d-flex align-items-center">
+          <div class="form-check form-switch mb-0">
+            <input class="form-check-input" type="checkbox" id="darkSwitch">
+            <label class="form-check-label" for="darkSwitch">
+              <i class="fas fa-moon"></i>
+            </label>
       </div>
     </div>
   </div>
@@ -37,10 +80,12 @@
                 <div class="underline"></div>
             </div>
 
+
             <article class="review">
                 <div class="img-container">
                     <img src="#" id="person-img"/>
                 </div>
+
 
                 <h4 id="author"> Insert Name Here</h4>
                 <p id="job">insert Job here</p>
@@ -48,14 +93,17 @@
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."    
                 </p>
 
+
                 <div class="button-container">
                     <button class="prev-btn">
                         <i class="fas fa-chevron-left"></i>
                     </button>
 
+
                      <button class="next-btn">
                         <i class="fas fa-chevron-right"></i>
                     </button>
+
 
                 </div>
             </article>
@@ -63,14 +111,42 @@
     </main>
 
 
-    
+
+
+   
 
 
 
 
-    
+
+
+
+
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script>
+    const darkSwitch = document.getElementById('darkSwitch');
+    const body = document.body;
+
+
+    // load saved preference
+    if (localStorage.getItem('darkMode') === 'true') {
+      body.classList.add('dark-mode');
+      darkSwitch.checked = true;
+    }
+
+
+    darkSwitch.addEventListener('change', () => {
+      body.classList.toggle('dark-mode', darkSwitch.checked);
+      localStorage.setItem('darkMode', darkSwitch.checked);
+    });
+  </script>
+
+
+
+
 </body>
+
 
 </html>
