added my testimonials and fixed codes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
     <section id="home" class="hero">
         <img src="unnamed (1).jpg" alt="my profile picture" width="50%"/> 
-        <h2>hi, I am <span class="accent">Ean Worrell</span></h2>
+        <h2>greetings everyone, I am <span class="accent">Ean Worrell</span></h2>
         <p>I'm a high school student learning web development!</p>
     </section>
 
